# differential-dataflow

./: Cargo.toml
examples/: col.rs
persist/: Cargo.toml  README.md  build.rs
persist/benches/: capnp.rs  trace.rs
persist/src/: error.rs  lib.rs  operators.rs  persister.rs  trace.capnp  trace.rs
persist/src/storage/: file.rs  mod.rs  s3.rs  sqlite.rs
src/: lib.rs
src/operators/: join.rs  mod.rs  reduce.rs
src/operators/arrange/: agent.rs  arrangement.rs  upsert.rs  writer.rs
src/trace/: mod.rs
src/trace/cursor/: cursor_list.rs  mod.rs
src/trace/implementations/: col.rs  merge_batcher.rs  mod.rs  ord.rs  spine_fueled.rs
src/trace/wrappers/: frontier.rs  mod.rs
