[package]
name = "persist"
version = "0.1.0"
authors = ["Daniel Harrison <52528+danhhz@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"

[build-dependencies]
capnpc = "0.14"

[dependencies]
capnp = "0.14"
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow", default-features = false }
differential-dataflow = { path = "../" }
abomonation = "0.7"
abomonation_derive = "0.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
pprof = { version = "0.4", features = ["flamegraph", "criterion", "protobuf"] }

[lib]
bench = false

[[bench]]
name = "trace"
harness = false
